language/move-lang/tests/move_check/parser/use_with_module.exp
error: 

   ┌── tests/move_check/parsing/use_with_module.move:3:1 ───
   │
 3 │ module M {
   │ ^^^^^^ Unrecognized Token: module
   ·
 3 │ module M {
   │ ------ Expected:  "native", "public", "resource", "struct", "use", "}", r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

