language/move-lang/tests/move_check/parser/use_with_module.move
// Top-level "use" declarations can only be followed by a main function.
use 0x0::Module;
module M {
}
